<resources>
    <string name="app_name">CrudFirebase</string>
    <string name="users_list">Users List</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>